--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     
     <div id="kartlar" class="flex flex-wrap justify-center gap-8 p-8 min-h-screen">
         
-        <div class="w-full sm:w-1/2 md:max-w-xs lg:w-1/4 bg-white p-6 shadow-xl rounded-3xl flex flex-col gap-4">
+        <div class="w-full sm:w-1/2 lg:w-1/4 p-6 rounded-lg flex flex-col col-gap-4 bg-white shadow-md transition-all duration-300 hover:shadow-xl hover:-translate-y-1">
             <div class="h-40 bg-gray-300 rounded-xl"></div>
             <div class="flex flex-col gap-2">
                 <h2 class="text-xl font-bold">KART 1: ANA BAŞLIK</h2>
@@ -68,7 +68,7 @@
                 GÖRÜNTÜLE
             </button>
         </div>
-        <div class="w-full sm:w-1/2 md:max-w-xs lg:w-1/4 bg-white p-6 shadow-xl rounded-3xl flex flex-col gap-4">
+        <div class="w-full sm:w-1/2 lg:w-1/4 p-6 rounded-lg flex flex-col col-gap-4 bg-white shadow-md transition-all duration-300 hover:shadow-xl hover:-translate-y-1">
             <div class="h-40 bg-gray-300 rounded-xl"></div>
             <div class="flex flex-col gap-2">
                 <h2 class="text-xl font-bold">KART 2: YENİ BÖLÜM</h2>
@@ -80,7 +80,7 @@
                 DEVAM
             </button>
         </div>
-        <div class="w-full sm:w-1/2 md:max-w-xs lg:w-1/4 bg-white p-6 shadow-xl rounded-3xl flex flex-col gap-4">
+        <div class="w-full sm:w-1/2 lg:w-1/4 p-6 rounded-lg flex flex-col col-gap-4 bg-white shadow-md transition-all duration-300 hover:shadow-xl hover:-translate-y-1">
             <div class="h-40 bg-gray-300 rounded-xl"></div>
             <div class="flex flex-col gap-2">
                 <h2 class="text-xl font-bold">KART 3: SON ADIM</h2>
