Hero section animasyonu eklendi ve sınıflar birlestirildi

--- a/index.html
+++ b/index.html
@@ -38,16 +38,14 @@
     <section class="bg-white py-16 px-8 sm:py-24 text-center">
     <div class="max-w-4xl mx-auto"> 
         
-        <h1 class="text-4xl sm:text-6xl md:text-7xl font-extrabold text-gray-900 mb-6 leading-tight">
-            Rummo Blog'a Hoş Geldiniz. <span class="text-blue-600">Öğrenme</span> Yolculuğunuz Başlasın.
+        <h1 class="animate-fade-in-up text-4xl sm:text-6xl md:text-7xl font-extrabold text-gray-900 mb-6 leading-tight">
+    Rummo Blog'a Hoş Geldiniz. <span class="text-blue-600">Öğrenme</span> Yolculuğunuz Başlasın.
         </h1>
-        
-        <p class="text-lg text-gray-600 mb-10 max-w-2xl mx-auto">
-            Gelişen teknolojileri, trendleri ve kodlama ipuçlarını tek bir yerden takip edin. Bilgi dolu yazılarımızla her gün kendinizi geliştirin.
+        <p class="animate-fade-in-up text-lg text-gray-600 mb-10 max-w-2xl mx-auto" style="animation-delay: 0.3s;">
+    Gelişen teknolojileri, trendleri ve kodlama ipuçlarını tek bir yerden takip edin. Bilgi dolu yazılarımızla her gün kendinizi geliştirin.
         </p>
-
-        <a href="#kartlar" class="inline-block py-3 px-8 text-lg bg-red-600 text-white font-semibold rounded-full shadow-lg hover:bg-red-700 transition duration-300">
-            Hemen Blog Yazılarını Keşfet
+        <a href="#kartlar" class="animate-fade-in-up inline-block py-3 px-8 text-lg bg-red-600 text-white font-semibold rounded-full shadow-lg hover:bg-red-700 transition duration-300" style="animation-delay: 0.6s;">
+    Hemen Blog Yazılarını Keşfet
         </a>
 
     </div>
