Paralaks benzeri efekt ile 3D derinlik algisi artirildi

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
     </button>
 </header>
 
+    <div class="fixed inset-0 -z-10 bg-cover opacity-10" style="background-image: url('https://source.unsplash.com/random/1600x900/?abstract,geometric,dark');"></div>
+
+<section class="bg-gray-800 py-16 px-8 sm:py-24 text-center border-b border-gray-700">
+
 
     <section class="bg-gray-800 py-16 px-8 sm:py-24 text-center border-b border-gray-700">
     <div class="max-w-4xl mx-auto"> 
@@ -57,7 +61,7 @@
             <div class="flex flex-col gap-2">
                 <h2 class="text-xl font-bold">KART 1: ANA BAŞLIK</h2>
                 <p class="text-gray-400 text-sm">
-                    Bu ilk kartımız. Responsive tasarıma geçiyoruz!
+                    Bu ilk kart. Responsive tasarıma geçiş zamanı!
                 </p>
             </div>
             <button class="w-full py-3 bg-blue-600 text-white rounded-xl font-medium shadow-lg hover:bg-blue-700 transition duration-300">
@@ -69,7 +73,7 @@
             <div class="flex flex-col gap-2">
                 <h2 class="text-xl font-bold">KART 2: YENİ BÖLÜM</h2>
                 <p class="text-gray-400 text-sm">
-                    İç içe flexbox mantığını tamamen anladık.
+                    İç içe flexbox mantığı
                 </p>
             </div>
             <button class="w-full py-3 bg-indigo-600 text-white rounded-xl font-medium shadow-lg hover:bg-indigo-700 transition duration-300">
@@ -81,7 +85,7 @@
             <div class="flex flex-col gap-2">
                 <h2 class="text-xl font-bold">KART 3: SON ADIM</h2>
                 <p class="text-gray-400 text-sm">
-                    Bu, Hafta 2'de yapacağınız ilk büyük adımdır!
+                    Son Adım!
                 </p>
             </div>
             <button class="w-full py-3 bg-red-600 text-white rounded-xl font-medium shadow-lg hover:bg-red-700 transition duration-300">
