--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="#" class="glitch-link text-gray-400 hover:text-red-500 font-medium" data-text="Anasayfa">Anasayfa</a>
         <a href="#" class="glitch-link text-gray-400 hover:text-red-500 font-medium" data-text="Blog">Blog</a>
         <a href="#" class="glitch-link text-gray-400 hover:text-red-500 font-medium" data-text="Hakkında">Hakkında</a>
-        <a href="#" class="glitch-link text-white py-2 px-4 bg-blue-600 rounded-lg hover:bg-blue-700 transition" data-text="İletişim">İletişim</a>
+        <a href="#" class="text-white py-2 px-4 bg-blue-600 rounded-lg hover:bg-blue-700 transition duration-300 shadow-md">İletişim</a>
         
     </nav>
     
@@ -33,9 +33,6 @@
 </header>
 
     <div class="fixed inset-0 -z-10 bg-cover opacity-10" style="background-image: url('https://source.unsplash.com/random/1600x900/?abstract,geometric,dark');"></div>
-
-<section class="bg-gray-800 py-16 px-8 sm:py-24 text-center border-b border-gray-700">
-
 
     <section class="bg-gray-800 py-16 px-8 sm:py-24 text-center border-b border-gray-700">
     <div class="max-w-4xl mx-auto"> 
