Dinamik kart görselleri ve JS hatasi tamamen duzeltildi

--- a/index.html
+++ b/index.html
@@ -99,81 +99,55 @@
 
 
 <script>
-    const mobileMenu = document.getElementById('mobile-menu');
-    const closeButton = document.getElementById('close-menu');
+  const mobileMenu = document.getElementById('mobile-menu');
+  const closeButton = document.getElementById('close-menu');
 
-    // Hamburger menüye tıklandığında menüyü aç (header içindeki butonu seçiyoruz)
-    document.querySelector('header button.md\\:hidden').addEventListener('click', () => {
-        mobileMenu.classList.remove('-translate-x-full');
-    });
+  // Mobil Menü Fonksiyonları
+  document.querySelector('header button.md\\:hidden').addEventListener('click', () => {
+    mobileMenu.classList.remove('-translate-x-full');
+  });
+  // ... (Diğer mobil menü kodları) ...
 
-    // Kapatma düğmesine tıklandığında menüyü kapat
-    closeButton.addEventListener('click', () => {
-        mobileMenu.classList.add('-translate-x-full');
-    });
+  // 1. Veri Kaynağı: Blog yazılarımız (BU KISIM EKLENMELİ)
+  const blogPosts = [
+    {
+      title: "Tailwind CSS ve 3D Tasarım",
+      excerpt: "Sıfırdan modern bir koyu tema ve 3D derinlik algısı nasıl oluşturulur?",
+      buttonText: "GÖRÜNTÜLE",
+      color: "red",
+      imageUrl: "https://source.unsplash.com/random/400x225/?dark,abstract" 
+    },
+        // ... (Diğer blog postları) ...
+        {
+      title: "Inter Font Entegrasyonu",
+      excerpt: "Google Fonts'tan modern bir fontu Tailwind ile ana font yapma.",
+      buttonText: "OKU",
+      color: "green",
+      imageUrl: "https://source.unsplash.com/random/400x225/?tech,pattern" 
+    }
+  ];
 
-    // Mobile menu içindeki linklere tıklandığında menüyü kapat
-    document.querySelectorAll('#mobile-menu a').forEach(link => {
-        link.addEventListener('click', () => {
-            mobileMenu.classList.add('-translate-x-full');
-        });
-    });
+  const kartlarContainer = document.getElementById('kartlar');
+
+  // 2. Her bir yazı için kart oluşturma (BU KISIM EKLENMELİ)
+  blogPosts.forEach(post => {
+    const cardHTML = `
+      <div class="w-full sm:w-1/2 lg:w-1/4 p-6 rounded-lg flex flex-col gap-4 bg-gray-800 text-white shadow-2xl transition-all duration-300 hover:shadow-2xl hover:shadow-${post.color}-500/50 hover:-translate-y-2">
+        <img src="${post.imageUrl}" alt="${post.title} görseli" class="h-40 w-full object-cover rounded-xl" />
+        <div class="flex flex-col gap-2">
+          <h2 class="text-xl font-bold">BLOG: ${post.title}</h2>
+          <p class="text-gray-400 text-sm">
+            ${post.excerpt}
+          </p>
+        </div>
+        <button class="w-full py-3 bg-${post.color}-600 text-white rounded-xl font-medium shadow-lg hover:bg-${post.color}-700 transition duration-300">
+          ${post.buttonText}
+        </button>
+      </div>
+    `;
+    // Oluşturulan kart HTML'ini kapsayıcıya ekle
+    kartlarContainer.innerHTML += cardHTML;
+  });
 </script>
-
-
-<script>
-    // 1. Veri Kaynağı: Blog yazılarımız
-    const blogPosts = [
-        {
-            title: "Tailwind CSS ve 3D Tasarım",
-            excerpt: "Sıfırdan modern bir koyu tema ve 3D derinlik algısı nasıl oluşturulur?",
-            buttonText: "GÖRÜNTÜLE",
-            color: "red" 
-        },
-        {
-            title: "JavaScript ile Mobil Menü",
-            excerpt: "Basit JS ile şık açılır-kapanır mobil menü (drawer) yapımı.",
-            buttonText: "DEVAM",
-            color: "indigo"
-        },
-        {
-            title: "Favicon ve OG Meta Etiketleri",
-            excerpt: "Sitenizin tarayıcı ve sosyal medya paylaşımlarında şık görünmesi.",
-            buttonText: "BAŞARILI",
-            color: "blue"
-        },
-        {
-            title: "Inter Font Entegrasyonu",
-            excerpt: "Google Fonts'tan modern bir fontu Tailwind ile ana font yapma.",
-            buttonText: "OKU",
-            color: "green"
-        }
-        // Daha fazla kart eklemek için bu objeleri kopyalayabilirsiniz!
-    ];
-
-    const kartlarContainer = document.getElementById('kartlar');
-
-    // 2. Her bir yazı için kart oluşturma
-    blogPosts.forEach(post => {
-        const cardHTML = `
-            <div class="w-full sm:w-1/2 lg:w-1/4 p-6 rounded-lg flex flex-col gap-4 bg-gray-800 text-white shadow-2xl transition-all duration-300 hover:shadow-2xl hover:shadow-${post.color}-500/50 hover:-translate-y-2">
-                <div class="h-40 bg-gray-700 rounded-xl"></div>
-                <div class="flex flex-col gap-2">
-                    <h2 class="text-xl font-bold">BLOG: ${post.title}</h2>
-                    <p class="text-gray-400 text-sm">
-                        ${post.excerpt}
-                    </p>
-                </div>
-                <button class="w-full py-3 bg-${post.color}-600 text-white rounded-xl font-medium shadow-lg hover:bg-${post.color}-700 transition duration-300">
-                    ${post.buttonText}
-                </button>
-            </div>
-        `;
-        // Oluşturulan kart HTML'ini kapsayıcıya ekle
-        kartlarContainer.innerHTML += cardHTML;
-    });
-
-</script>
-
 </body>
 </html>
