--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
         <p>&copy; 2025 Rummo Blog. Tüm Hakları Saklıdır. | rummolojia UI/UX Engineer</p>
     </footer>
 
+    <script type="text/javascript" src="https://unpkg.com/vanilla-tilt@1.8.1/dist/vanilla-tilt.min.js"></script>
+
     <script src="tilt.js"></script>
     
 </body>
