--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 
     <section class="bg-gray-800 py-16 px-8 sm:py-24 text-center border-b border-gray-700">
         <div class="max-w-4xl mx-auto"> 
-            <h1 class="animate-fade-in-up text-4xl sm:text-6xl md:text-7xl font-extrabold text-white mb-6 leading-tight">
-                Rummo Blog'a Hoş Geldiniz. <span class="text-blue-400">Öğrenme</span> Yolculuğunuz Başlasın.
+            <h1 class="animate-fade-in-up text-4xl sm:text-6xl md:text-7xl font-extrabold text-white mb-6 leading-tight relative">
+            Rummo Blog'a Hoş Geldiniz. <span id="glow-text" class="text-blue-400 interactive-glow">Öğrenme</span> Yolculuğunuz Başlasın.
             </h1>
             <p class="animate-fade-in-up text-gray-400 text-lg mb-10 max-w-2xl mx-auto" style="animation-delay: 0.3s;">
                 Gelişen teknolojileri, trendleri ve kodlama ipuçlarını tek bir yerden takip edin. Bilgi dolu yazılarımızla her gün kendinizi geliştirin.
